--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -74,7 +74,7 @@
             <span>Actividades</span>
           </div>
         </div>
-        <div class="activity">
+        <div class="activity" id="actLeft">
           <img id="miniature" src="../images/actividades/activity1.png" />
           <div class="text">
             <div id="rol">
@@ -94,9 +94,9 @@
           </div>
         </div>
 
-        <div class="activity" id="invert">
-          <img id="miniatureInvert" src="../images/actividades/activity2.jpg" />
-          <div class="text" id="textInvert">
+        <div class="activity" id="actRight">
+          <img id="miniatureRight" src="../images/actividades/activity2.jpg" />
+          <div class="text" id="textRight">
             <div id="rol">
               <p>Exposición</p>
             </div>
@@ -112,7 +112,7 @@
             </div>
           </div>
         </div>
-        <div class="activity">
+        <div class="activity" id="actLeft">
           <img id="miniature" src="../images/actividades/activity3.png" />
           <div class="text">
             <div id="rol">
@@ -134,9 +134,9 @@
           </div>
         </div>
 
-        <div class="activity" id="invert">
-          <img id="miniatureInvert" src="../images/actividades/activity6.jpg" />
-          <div class="text" id="textInvert">
+        <div class="activity" id="actRight">
+          <img id="miniatureRight" src="../images/actividades/activity6.jpg" />
+          <div class="text" id="textRight">
             <div id="rol">
               <p>Social</p>
             </div>
@@ -156,7 +156,7 @@
           </div>
         </div>
 
-        <div class="activity">
+        <div class="activity" id="actLeft">
           <img id="miniature" src="../images/actividades/activity7.jpg" />
           <div class="text">
             <div id="rol">
@@ -176,9 +176,9 @@
           </div>
         </div>
 
-        <div class="activity" id="invert">
-          <img id="miniatureInvert" src="../images/actividades/activity8.jpg" />
-          <div class="text" id="textInvert">
+        <div class="activity" id="actRight">
+          <img id="miniatureRight" src="../images/actividades/activity8.jpg" />
+          <div class="text" id="textRight">
             <div id="rol">
               <p>Social</p>
             </div>
@@ -195,7 +195,7 @@
           </div>
         </div>
 
-        <div class="activity">
+        <div class="activity" id="actLeft">
           <img id="miniature" src="../images/actividades/activity9.jpg" />
           <div class="text">
             <div id="rol">
