--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -74,7 +74,7 @@
             <span>Concursos</span>
           </div>
         </div>
-        <div class="activity">
+        <div class="activity" id="actLeft">
           <img id="miniature" src="../images/concursos/concurso1.jpg" />
           <div class="text">
             <div id="rol">
@@ -92,9 +92,9 @@
           </div>
         </div>
 
-        <div class="activity" id="invert">
-          <img id="miniatureInvert" src="../images/concursos/concurso2.jpg" />
-          <div class="text" id="textInvert">
+        <div class="activity" id="actRight">
+          <img id="miniatureRight" src="../images/concursos/concurso2.jpg" />
+          <div class="text" id="textRight">
             <div id="rol">
               <p>Cosplay</p>
             </div>
@@ -112,7 +112,7 @@
             </div>
           </div>
         </div>
-        <div class="activity">
+        <div class="activity" id="actLeft">
           <img id="miniature" src="../images/concursos/concurso3.jpg" />
           <div class="text">
             <div id="rol">
@@ -130,9 +130,9 @@
           </div>
         </div>
 
-        <div class="activity" id="invert">
-          <img id="miniatureInvert" src="../images/concursos/concurso4.jpg" />
-          <div class="text" id="textInvert">
+        <div class="activity" id="actRight">
+          <img id="miniatureRight" src="../images/concursos/concurso4.jpg" />
+          <div class="text" id="textRight">
             <div id="rol">
               <p>Cosplay</p>
             </div>
