--- a/informacion/noticias/noticia3.html
+++ b/informacion/noticias/noticia3.html
@@ -54,7 +54,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="location.href='../entradas/inscripcion.html'"
+              onclick="location.href='../../entradas/inscripcion.html'"
             >
               Entradas
             </button>
@@ -102,8 +102,8 @@
         </div>
       </div>
     </main>
-     <!-- FOOTER -->
-     <footer>
+    <!-- FOOTER -->
+    <footer>
       <div class="footer">
         <div class="about">
           <div class="colabout">
