--- a/index.html
+++ b/index.html
@@ -125,8 +125,11 @@
             </div>
             <div class="artists">
               <div class="artist">
-                <a href="./informacion/invitados/overwatchvoices.html"
-                  ><img id="confirmation" src="./images/concursos/concurso1.jpg"
+                <a href="./informacion/concursos.html"
+                  ><img
+                    id="confirmation"
+                    src="./images/concursos/concurso1.jpg"
+                    alt="Concurso Asian Cover Dance"
                 /></a>
                 <div class="text">
                   <div id="rol">
@@ -139,10 +142,11 @@
               </div>
 
               <div class="artist">
-                <a href="./informacion/invitados/poltattoo.html">
+                <a href="./informacion/concursos.html">
                   <img
                     id="confirmation"
                     src="./images/concursos/concurso2.jpg"
+                    alt="Concurso Pop Culture Hiroshima"
                   />
                 </a>
                 <div class="text">
@@ -178,7 +182,10 @@
         <aside class="news">
           <div class="new">
             <a href="./informacion/noticias/noticia1.html"
-              ><img id="miniature" src="./images/noticias/noticia1.jpg"
+              ><img
+                id="miniature"
+                src="./images/noticias/noticia1.jpg"
+                alt="Noticia Hiroshi Masuoka"
             /></a>
             <div id="description">
               <p>Falleció Hiroshi Masuoka, la voz del Maestro Roshi</p>
@@ -186,7 +193,10 @@
           </div>
           <div class="new">
             <a href="./informacion/noticias/noticia2.html"
-              ><img id="miniature" src="./images/noticias/noticia2.jpg"
+              ><img
+                id="miniature"
+                src="./images/noticias/noticia2.jpg"
+                alt="Noticia BTS"
             /></a>
             <div id="description">
               <p>BTS aplaza su gira por España</p>
@@ -194,7 +204,10 @@
           </div>
           <div class="new">
             <a href="./informacion/noticias/noticia3.html"
-              ><img id="miniature" src="./images/noticias/noticia3.jpg"
+              ><img
+                id="miniature"
+                src="./images/noticias/noticia3.jpg"
+                alt="Noticia RPG Magic Legends"
             /></a>
             <div id="description">
               <p>Nuevo juego de Magic: RPG Magic Legends</p>
@@ -236,14 +249,22 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="./images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="./images/iconos/twitter.png" alt="Twitter" />
+            <img id="iconos" src="./images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              id="iconos"
+              src="./images/iconos/twitter.png"
+              alt="Icono Twitter"
+            />
             <img
               id="iconos"
               src="./images/iconos/facebook.png"
-              alt="Facebook"
+              alt="Icono Facebook"
             />
-            <img id="iconos" src="./images/iconos/insta.png" alt="Instagram" />
+            <img
+              id="iconos"
+              src="./images/iconos/insta.png"
+              alt="Icono Instagram"
+            />
           </div>
           <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
