--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -16,58 +16,43 @@
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
     <header>
-      <div class="header" id="header">
+      <div class="container">
         <div class="logo">
-          <a href="../index.html"
-            ><img src="../images/plantilla/logo.png" alt="logo"
-          /></a>
+          <a href="#"><img src="../images/plantilla/logo.png" alt="logo"/></a>
         </div>
         <div class="navbar">
-          <div class="dropdown">
-            <button class="dropbtn">
-              Información &#9660;
-            </button>
-            <div class="dropdown-content">
-              <a href="../informacion/invitados.html">Invitados</a>
-              <a href="../informacion/actividades.html">Actividades</a>
-              <a href="../informacion/concursos.html">Concursos</a>
-            </div>
+          <div class="icon-bar" onclick="Show()">
+            <i></i>
+            <i></i>
+            <i></i>
           </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../horarios/horarios.html'"
-            >
-              Horarios
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../localizacion/localizacion.html'"
-            >
-              Localización
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='./inscripcion.html'"
-            >
-              Entradas
-            </button>
-          </div>
+          <ul id="nav-lists">
+            <li class="close"><span onclick="Hide()">×</span></li>
+            <li>
+              <div class="dropdown">
+                <button class="dropbtn">
+                  Información &#9660;
+                </button>
+                <div class="dropdown-content">
+                  <a id="font" href="../informacion/invitados.html">Invitados</a>
+                  <a href="../informacion/actividades.html">Actividades</a>
+                  <a href="../informacion/concursos.html">Concursos</a>
+                </div>
+              </div>
+            </li>
+            <li><a href="../horarios/horarios.html">Horarios</a></li>
+            <li><a href="../localizacion/localizacion.html">Localización</a></li>
+            <li><a href="../entradas/inscripcion.html">Entradas</a></li>
+          </ul>
         </div>
       </div>
-    </header>
     <main>
       <div class="main">
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./inscripcion.html">Entradas</a></li>
+            <li><a href="inscripcion.html">Entradas</a></li>
           </ul>
         </div>
         <div class="titleBox">
@@ -137,7 +122,6 @@
         </div>
       </div>
     </main>
-    <!-- FOOTER -->
     <footer>
       <div class="footer">
         <div class="about">
@@ -148,21 +132,23 @@
                 >Contactar por correo</a
               >
             </div>
+
             <div>
-              <a href="../informacion/footer/voluntariado.html">Voluntariado</a>
+              <a href="./informacion/invitados.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="../informacion/footer/torneos.html">Bases de Torneos</a>
+              <a href="../informacion/bases/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="../informacion/footer/concursos.html"
+              <a href="../informacion/bases/concursos.html"
                 >Bases de Concursos</a
               >
             </div>
+
             <div>
-              <a href="../informacion/footer/politica.html"
+              <a href="../informacion/bases/politica.html"
                 >Política de privacidad
               </a>
             </div>
@@ -183,8 +169,8 @@
         </div>
       </div>
     </footer>
-    <!-- SCRIPTS -->
     <script src="../js/validacion-formulario.js"></script>
     <script src="../js/scroll.js"></script>
+    <script src="../js/sidebar.js"></script>
   </body>
 </html>
