--- a/informacion/invitados/laia.html
+++ b/informacion/invitados/laia.html
@@ -10,195 +10,182 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Invitados-->
+    <!-- CSS Inscription-->
     <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
     <header>
-      <div class="header" id="header">
+      <div class="container">
         <div class="logo">
-          <a href="../../index.html"
-            ><img src="../../images/plantilla/logo.png" alt="logo"
-          /></a>
+          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
         </div>
         <div class="navbar">
-          <div class="dropdown">
-            <button class="dropbtn">
-              Información &#9660;
-            </button>
-            <div class="dropdown-content">
-              <a href="../invitados.html">Invitados</a>
-              <a href="../actividades.html">Actividades</a>
-              <a href="../concursos.html">Concursos</a>
-            </div>
+          <div class="icon-bar" onclick="Show()">
+            <i></i>
+            <i></i>
+            <i></i>
           </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../../horarios/horarios.html'"
-            >
-              Horarios
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../../localizacion/localizacion.html'"
-            >
-              Localización
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../entradas/inscripcion.html'"
-            >
-              Entradas
-            </button>
-          </div>
+          <ul id="nav-lists">
+            <li class="close"><span onclick="Hide()">×</span></li>
+            <li>
+              <div class="dropdown">
+                <button class="dropbtn">
+                  Información &#9660;
+                </button>
+                <div class="dropdown-content">
+                  <a id="font" href="../informacion/invitados.html">Invitados</a>
+                  <a href="../informacion/actividades.html">Actividades</a>
+                  <a href="../informacion/concursos.html">Concursos</a>
+                </div>
+              </div>
+            </li>
+            <li><a href="../../horarios/horarios.html">Horarios</a></li>
+            <li><a href="../../localizacion/localizacion.html">Localización</a></li>
+            <li><a href="../../entradas/inscripcion.html">Entradas</a></li>
+          </ul>
         </div>
+      </header>
       </div>
-    </header>
-    <main>
-      <div class="main">
-        <div class="content">
-          <div class="sidebar">
-            <a href="./faky.html">Faky</a>
-            <a href="./kiki.html">Kiki vivi lily</a>
-            <a href="./odashima.html">Odashima</a>
-            <a href="./shirogane.html">Shirogane</a>
-            <a href="./sukisha.html">Sukisha</a>
-            <a class="active" href="./laia.html">Laia López</a>
-            <a href="./ginny.html">Ginni Di</a>
-            <a href="./meowri.html">Jenna Lynn</a>
-            <a href="./halex.html">H. Alexander</a>
-            <a href="./ladybeard.html">Lady Beard</a>
-            <a href="./overwatchvoices.html">Voces de Overwatch</a>
-            <a href="./poltattoo.html">Pol Tattoo</a>
-          </div>
-          <div id="information">
-            <div class="breadcrumb">
-              <ul>
-                <li><a href="../../index.html">Inicio</a></li>
-                <li><a href="../invitados.html">Invitados</a></li>
-                <li><a href="./laia.html">Laia López</a></li>
-              </ul>
+      <main>
+        <div class="main">
+          <div class="content">
+            <div class="sidebar">
+              <a href="./faky.html">Faky</a>
+              <a href="./kiki.html">Kiki vivi lily</a>
+              <a href="./odashima.html">Odashima</a>
+              <a href="./shirogane.html">Shirogane</a>
+              <a href="./sukisha.html">Sukisha</a>
+              <a class="active" href="./laia.html">Laia López</a>
+              <a href="./ginny.html">Ginni Di</a>
+              <a href="./meowri.html">Jenna Lynn</a>
+              <a href="./halex.html">H. Alexander</a>
+              <a href="./ladybeard.html">Lady Beard</a>
+              <a href="./overwatchvoices.html">Voces de Overwatch</a>
+              <a href="./poltattoo.html">Pol Tattoo</a>
             </div>
-            <div class="titleBox">
-              <div id="title">
-                <span>Laia López</span>
+            <div class="information-box">
+              <div class="breadcrumb">
+                <ul>
+                  <li><a href="../../index.html">Inicio</a></li>
+                  <li><a href="../invitados.html">Invitados</a></li>
+                  <li><a href="./laia.html">Laia López</a></li>
+                </ul>
+              </div>
+              <div class="titleBox">
+                <div id="title">
+                  <span>Laia López</span>
+                </div>
+              </div>
+              <div class="information">
+                <div class="picture">
+                  <img src="../../images/artistas/artist6-avatar.jpg" />
+                </div>
+                <article>
+                  <p>
+                    Laia López, graduada en Bellas Artes en la Universidad de
+                    Barcelona, es una autodidacta en el campo de la ilustración
+                    digital y en el desarrollo de su propio estilo de dibujo.
+                    Empezó a dedicarse de manera profesional al arte a los 16 años
+                    y desde entonces ha seguido su camino por la rama de la
+                    ilustración digital y tradicional, especializándose en el
+                    diseño de personajes, desarrollo visual y el cómic/novela
+                    ilustrada. Comparte la mayoría de sus ilustraciones por redes
+                    sociales, donde alcanza más de un millón de seguidores.
+                  </p>
+                  <div class="iframe">
+                    <img
+                      src="../../images/artistas/artist6-banner.jpg"
+                      id="picture-article"
+                    />
+                  </div>
+                  <p>
+                    Hace unos pocos meses, publicó su último trabajo: “Strawberry
+                    Moon” su primera obra en solitario, una novela gráfica juvenil
+                    en dos tomos sobre sirenas. Actualmente trabaja en ilustración
+                    editorial, ilustrando libros infantiles y juveniles para
+                    diversas editoriales españolas, como Planeta, Penguin Random
+                    House, Norma Editorial, La Galera… ¿Os suenan Mystical? ¿Sara
+                    y las goleadoras? ¿La diversión de Martina? ¡Los ha ilustrado
+                    ella! También tiene un artbook con una recopilación de sus
+                    mejores obras hasta el momento llamado “Gleaming” En su tiempo
+                    libre también hace fan art de las cosas que le apasionan,
+                    sobretodo de K-pop, anime y Disney.
+                  </p>
+                  <p>
+                    ¡No os perdáis a Laia López por primera vez en Manguca! Tendrá
+                    un stand donde podréis conocerla y comprar su merchandising y
+                    además dará una charla. ¡Os esperamos!
+                  </p>
+                  <div class="iframe">
+                    <iframe
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/0zPVvGoMKdI"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </div>
+                </article>
               </div>
             </div>
-            <div id="information">
-              <div class="picture">
-                <img src="../../images/artistas/artist6-avatar.jpg" />
+          </div>
+        </div>
+      </main>
+      <footer>
+        <div class="footer">
+          <div class="about">
+            <div class="colabout">
+              <div>
+                <a
+                  href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                  >Contactar por correo</a
+                >
               </div>
-              <article>
-                <p>
-                  Laia López, graduada en Bellas Artes en la Universidad de
-                  Barcelona, es una autodidacta en el campo de la ilustración
-                  digital y en el desarrollo de su propio estilo de dibujo.
-                  Empezó a dedicarse de manera profesional al arte a los 16 años
-                  y desde entonces ha seguido su camino por la rama de la
-                  ilustración digital y tradicional, especializándose en el
-                  diseño de personajes, desarrollo visual y el cómic/novela
-                  ilustrada. Comparte la mayoría de sus ilustraciones por redes
-                  sociales, donde alcanza más de un millón de seguidores.
-                </p>
-                <div class="iframe">
-                  <img
-                    src="../../images/artistas/artist6-banner.jpg"
-                    id="picture-article"
-                  />
-                </div>
-                <p>
-                  Hace unos pocos meses, publicó su último trabajo: “Strawberry
-                  Moon” su primera obra en solitario, una novela gráfica juvenil
-                  en dos tomos sobre sirenas. Actualmente trabaja en ilustración
-                  editorial, ilustrando libros infantiles y juveniles para
-                  diversas editoriales españolas, como Planeta, Penguin Random
-                  House, Norma Editorial, La Galera… ¿Os suenan Mystical? ¿Sara
-                  y las goleadoras? ¿La diversión de Martina? ¡Los ha ilustrado
-                  ella! También tiene un artbook con una recopilación de sus
-                  mejores obras hasta el momento llamado “Gleaming” En su tiempo
-                  libre también hace fan art de las cosas que le apasionan,
-                  sobretodo de K-pop, anime y Disney.
-                </p>
-                <p>
-                  ¡No os perdáis a Laia López por primera vez en Manguca! Tendrá
-                  un stand donde podréis conocerla y comprar su merchandising y
-                  además dará una charla. ¡Os esperamos!
-                </p>
-                <div class="iframe">
-                  <iframe
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/0zPVvGoMKdI"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
-                </div>
-              </article>
+  
+              <div>
+                <a href="../informacion/invitados.html">Voluntariado</a>
+              </div>
             </div>
+            <div class="colabout">
+              <div>
+                <a href="../bases/torneos.html">Bases de Torneos</a>
+              </div>
+              <div>
+                <a href="../bases/concursos.html">Bases de Concursos</a>
+              </div>
+              <div>
+                <a href="../bases/politica.html">Política de privacidad</a>
+              </div>
+            </div>
+          </div>
+          <div class="contacto">
+            <div class="contactos">
+              <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+              <img
+                id="iconos"
+                src="../../images/iconos/twitter.png"
+                alt="Twitter"
+              />
+              <img
+                id="iconos"
+                src="../../images/iconos/facebook.png"
+                alt="Facebook"
+              />
+              <img
+                id="iconos"
+                src="../../images/iconos/insta.png"
+                alt="Instagram"
+              />
+            </div>
+            <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
           </div>
         </div>
-      </div>
-    </main>
-    <!-- FOOTER -->
-    <footer>
-      <div class="footer">
-        <div class="about">
-          <div class="colabout">
-            <div>
-              <a
-                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-                >Contactar por correo</a
-              >
-            </div>
-            <div>
-              <a href="../footer/voluntariado.html">Voluntariado</a>
-            </div>
-          </div>
-          <div class="colabout">
-            <div>
-              <a href="../footer/torneos.html">Bases de Torneos</a>
-            </div>
-            <div>
-              <a href="../footer/concursos.html">Bases de Concursos</a>
-            </div>
-            <div>
-              <a href="../footer/politica.html">Política de privacidad</a>
-            </div>
-          </div>
-        </div>
-        <div class="contacto">
-          <div class="contactos">
-            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img
-              id="iconos"
-              src="../../images/iconos/twitter.png"
-              alt="Twitter"
-            />
-            <img
-              id="iconos"
-              src="../../images/iconos/facebook.png"
-              alt="Facebook"
-            />
-            <img
-              id="iconos"
-              src="../../images/iconos/insta.png"
-              alt="Instagram"
-            />
-          </div>
-          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
-        </div>
-      </div>
-    </footer>
-    <!-- SCRIPTS -->
-    <script src="../../js/scroll.js"></script>
+      </footer>
+      <script src="../../js/scroll.js"></script>
+      <script src="../../js/sidebar.js"></script>
+
   </body>
 </html>
