--- a/informacion/invitados/shirogane.html
+++ b/informacion/invitados/shirogane.html
@@ -10,192 +10,179 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Invitados-->
+    <!-- CSS Inscription-->
     <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
     <header>
-      <div class="header" id="header">
+      <div class="container">
         <div class="logo">
-          <a href="../../index.html"
-            ><img src="../../images/plantilla/logo.png" alt="logo"
-          /></a>
+          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
         </div>
         <div class="navbar">
-          <div class="dropdown">
-            <button class="dropbtn">
-              Información &#9660;
-            </button>
-            <div class="dropdown-content">
-              <a href="../invitados.html">Invitados</a>
-              <a href="../actividades.html">Actividades</a>
-              <a href="../concursos.html">Concursos</a>
-            </div>
+          <div class="icon-bar" onclick="Show()">
+            <i></i>
+            <i></i>
+            <i></i>
           </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../../horarios/horarios.html'"
-            >
-              Horarios
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../../localizacion/localizacion.html'"
-            >
-              Localización
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../entradas/inscripcion.html'"
-            >
-              Entradas
-            </button>
-          </div>
+          <ul id="nav-lists">
+            <li class="close"><span onclick="Hide()">×</span></li>
+            <li>
+              <div class="dropdown">
+                <button class="dropbtn">
+                  Información &#9660;
+                </button>
+                <div class="dropdown-content">
+                  <a id="font" href="../informacion/invitados.html">Invitados</a>
+                  <a href="../informacion/actividades.html">Actividades</a>
+                  <a href="../informacion/concursos.html">Concursos</a>
+                </div>
+              </div>
+            </li>
+            <li><a href="../../horarios/horarios.html">Horarios</a></li>
+            <li><a href="../../localizacion/localizacion.html">Localización</a></li>
+            <li><a href="../../entradas/inscripcion.html">Entradas</a></li>
+          </ul>
         </div>
+      </header>
       </div>
-    </header>
-    <main>
-      <div class="main">
-        <div class="content">
-          <div class="sidebar">
-            <a href="./faky.html">Faky</a>
-            <a href="./kiki.html">Kiki vivi lily</a>
-            <a href="./odashima.html">Odashima</a>
-            <a class="active" href="./shirogane.html">Shirogane</a>
-            <a href="./sukisha.html">Sukisha</a>
-            <a href="./laia.html">Laia López</a>
-            <a href="./ginny.html">Ginni Di</a>
-            <a href="./meowri.html">Jenna Lynn</a>
-            <a href="./halex.html">H. Alexander</a>
-            <a href="./ladybeard.html">Lady Beard</a>
-            <a href="./overwatchvoices.html">Voces de Overwatch</a>
-            <a href="./poltattoo.html">Pol Tattoo</a>
-          </div>
-          <div id="information">
-            <div class="breadcrumb">
-              <ul>
-                <li><a href="../../index.html">Inicio</a></li>
-                <li><a href="../invitados.html">Invitados</a></li>
-                <li><a href="./shirogane.html">Shirogane</a></li>
-              </ul>
+      <main>
+        <div class="main">
+          <div class="content">
+            <div class="sidebar">
+              <a href="./faky.html">Faky</a>
+              <a href="./kiki.html">Kiki vivi lily</a>
+              <a href="./odashima.html">Odashima</a>
+              <a class="active" href="./shirogane.html">Shirogane</a>
+              <a href="./sukisha.html">Sukisha</a>
+              <a href="./laia.html">Laia López</a>
+              <a href="./ginny.html">Ginni Di</a>
+              <a href="./meowri.html">Jenna Lynn</a>
+              <a href="./halex.html">H. Alexander</a>
+              <a href="./ladybeard.html">Lady Beard</a>
+              <a href="./overwatchvoices.html">Voces de Overwatch</a>
+              <a href="./poltattoo.html">Pol Tattoo</a>
             </div>
-            <div class="titleBox">
-              <div id="title">
-                <span>Shirogane</span>
+            <div class="information-box">
+              <div class="breadcrumb">
+                <ul>
+                  <li><a href="../../index.html">Inicio</a></li>
+                  <li><a href="../invitados.html">Invitados</a></li>
+                  <li><a href="./shirogane.html">Shirogane</a></li>
+                </ul>
+              </div>
+              <div class="titleBox">
+                <div id="title">
+                  <span>Shirogane</span>
+                </div>
+              </div>
+              <div class="information">
+                <div class="picture">
+                  <img src="../../images/artistas/artist4-avatar.jpg" />
+                </div>
+                <article>
+                  <p>
+                    Shirogane-sama es una cosplayer, estilista de pelucas y MUA de
+                    Moscú que lleva haciendo cosplay poco más de 7 años. En 2017
+                    empezó a tener su propia tienda, Holish Cosplay, donde trabaja
+                    actualmente estilizando pelucas para cosplayers.
+                    Shirogane-sama empezó su negocio con su talentoso fotógrafo,
+                    Ovsyan, aunque en la actualidad dispone de un equipo más
+                    grande de creadores del cual está muy orgullosa.
+                  </p>
+                  <div class="iframe">
+                    <img
+                      src="../../images/artistas/artist4-banner.jpg"
+                      id="picture-article"
+                    />
+                  </div>
+                  <p>
+                    La mayor parte de su creatividad se refleja en sus sesiones de
+                    fotos y en sus videos de cosplay, solo en 2019 ha tenido más
+                    de 60 y varios videos, trabajando muy duro en ellos.
+                    Igualmente su pasión por las artes visuales no la han alejado
+                    de los concursos, donde suele actuar y lucir los trajes que
+                    ella confecciona. También suele juzgar en eventos de Rusia y
+                    últimamente de todo el mundo, ya que su popularidad la ha
+                    llevado a ser invitada de diversos eventos internacionales.
+                  </p>
+                  <div class="iframe">
+                    <iframe
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/bk98SfjtAA4"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </div>
+                  <p>
+                    ¡No os perdáis a Shirogane-sama por primera vez en la capital
+                    en la próxima edición de Manguca! Será jurado de los
+                    concursos, participará en el Q&A y además tendrá un stand
+                    donde podréis conocerla y comprar su merchandising. ¡Os
+                    esperamos!
+                  </p>
+                </article>
               </div>
             </div>
-            <div id="information">
-              <div class="picture">
-                <img src="../../images/artistas/artist4-avatar.jpg" />
+          </div>
+        </div>
+      </main>
+      <footer>
+        <div class="footer">
+          <div class="about">
+            <div class="colabout">
+              <div>
+                <a
+                  href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                  >Contactar por correo</a
+                >
               </div>
-              <article>
-                <p>
-                  Shirogane-sama es una cosplayer, estilista de pelucas y MUA de
-                  Moscú que lleva haciendo cosplay poco más de 7 años. En 2017
-                  empezó a tener su propia tienda, Holish Cosplay, donde trabaja
-                  actualmente estilizando pelucas para cosplayers.
-                  Shirogane-sama empezó su negocio con su talentoso fotógrafo,
-                  Ovsyan, aunque en la actualidad dispone de un equipo más
-                  grande de creadores del cual está muy orgullosa.
-                </p>
-                <div class="iframe">
-                  <img
-                    src="../../images/artistas/artist4-banner.jpg"
-                    id="picture-article"
-                  />
-                </div>
-                <p>
-                  La mayor parte de su creatividad se refleja en sus sesiones de
-                  fotos y en sus videos de cosplay, solo en 2019 ha tenido más
-                  de 60 y varios videos, trabajando muy duro en ellos.
-                  Igualmente su pasión por las artes visuales no la han alejado
-                  de los concursos, donde suele actuar y lucir los trajes que
-                  ella confecciona. También suele juzgar en eventos de Rusia y
-                  últimamente de todo el mundo, ya que su popularidad la ha
-                  llevado a ser invitada de diversos eventos internacionales.
-                </p>
-                <div class="iframe">
-                  <iframe
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/bk98SfjtAA4"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
-                </div>
-                <p>
-                  ¡No os perdáis a Shirogane-sama por primera vez en la capital
-                  en la próxima edición de Manguca! Será jurado de los
-                  concursos, participará en el Q&A y además tendrá un stand
-                  donde podréis conocerla y comprar su merchandising. ¡Os
-                  esperamos!
-                </p>
-              </article>
+  
+              <div>
+                <a href="../informacion/invitados.html">Voluntariado</a>
+              </div>
             </div>
+            <div class="colabout">
+              <div>
+                <a href="../bases/torneos.html">Bases de Torneos</a>
+              </div>
+              <div>
+                <a href="../bases/concursos.html">Bases de Concursos</a>
+              </div>
+              <div>
+                <a href="../bases/politica.html">Política de privacidad</a>
+              </div>
+            </div>
+          </div>
+          <div class="contacto">
+            <div class="contactos">
+              <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+              <img
+                id="iconos"
+                src="../../images/iconos/twitter.png"
+                alt="Twitter"
+              />
+              <img
+                id="iconos"
+                src="../../images/iconos/facebook.png"
+                alt="Facebook"
+              />
+              <img
+                id="iconos"
+                src="../../images/iconos/insta.png"
+                alt="Instagram"
+              />
+            </div>
+            <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
           </div>
         </div>
-      </div>
-    </main>
-    <!-- FOOTER -->
-    <footer>
-      <div class="footer">
-        <div class="about">
-          <div class="colabout">
-            <div>
-              <a
-                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-                >Contactar por correo</a
-              >
-            </div>
-            <div>
-              <a href="../footer/voluntariado.html">Voluntariado</a>
-            </div>
-          </div>
-          <div class="colabout">
-            <div>
-              <a href="../footer/torneos.html">Bases de Torneos</a>
-            </div>
-            <div>
-              <a href="../footer/concursos.html">Bases de Concursos</a>
-            </div>
-            <div>
-              <a href="../footer/politica.html">Política de privacidad</a>
-            </div>
-          </div>
-        </div>
-        <div class="contacto">
-          <div class="contactos">
-            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img
-              id="iconos"
-              src="../../images/iconos/twitter.png"
-              alt="Twitter"
-            />
-            <img
-              id="iconos"
-              src="../../images/iconos/facebook.png"
-              alt="Facebook"
-            />
-            <img
-              id="iconos"
-              src="../../images/iconos/insta.png"
-              alt="Instagram"
-            />
-          </div>
-          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
-        </div>
-      </div>
-    </footer>
-    <!-- SCRIPTS -->
-    <script src="../../js/scroll.js"></script>
+      </footer>
+      <script src="../../js/scroll.js"></script>
+      <script src="../../js/sidebar.js"></script>
+
   </body>
 </html>
