--- a/informacion/invitados/sukisha.html
+++ b/informacion/invitados/sukisha.html
@@ -10,233 +10,220 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Invitados-->
+    <!-- CSS Inscription-->
     <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
     <header>
-      <div class="header" id="header">
+      <div class="container">
         <div class="logo">
-          <a href="../../index.html"
-            ><img src="../../images/plantilla/logo.png" alt="logo"
-          /></a>
+          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
         </div>
         <div class="navbar">
-          <div class="dropdown">
-            <button class="dropbtn">
-              Información &#9660;
-            </button>
-            <div class="dropdown-content">
-              <a href="../invitados.html">Invitados</a>
-              <a href="../actividades.html">Actividades</a>
-              <a href="../concursos.html">Concursos</a>
-            </div>
+          <div class="icon-bar" onclick="Show()">
+            <i></i>
+            <i></i>
+            <i></i>
           </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../../horarios/horarios.html'"
-            >
-              Horarios
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../../localizacion/localizacion.html'"
-            >
-              Localización
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../entradas/inscripcion.html'"
-            >
-              Entradas
-            </button>
-          </div>
+          <ul id="nav-lists">
+            <li class="close"><span onclick="Hide()">×</span></li>
+            <li>
+              <div class="dropdown">
+                <button class="dropbtn">
+                  Información &#9660;
+                </button>
+                <div class="dropdown-content">
+                  <a id="font" href="../informacion/invitados.html">Invitados</a>
+                  <a href="../informacion/actividades.html">Actividades</a>
+                  <a href="../informacion/concursos.html">Concursos</a>
+                </div>
+              </div>
+            </li>
+            <li><a href="../../horarios/horarios.html">Horarios</a></li>
+            <li><a href="../../localizacion/localizacion.html">Localización</a></li>
+            <li><a href="../../entradas/inscripcion.html">Entradas</a></li>
+          </ul>
         </div>
+      </header>
       </div>
-    </header>
-    <main>
-      <div class="main">
-        <div class="content">
-          <div class="sidebar">
-            <a href="./faky.html">Faky</a>
-            <a href="./kiki.html">Kiki vivi lily</a>
-            <a href="./odashima.html">Odashima</a>
-            <a href="./shirogane.html">Shirogane</a>
-            <a class="active" href="./sukisha.html">Sukisha</a>
-            <a href="./laia.html">Laia López</a>
-            <a href="./ginny.html">Ginni Di</a>
-            <a href="./meowri.html">Jenna Lynn</a>
-            <a href="./halex.html">H. Alexander</a>
-            <a href="./ladybeard.html">Lady Beard</a>
-            <a href="./overwatchvoices.html">Voces de Overwatch</a>
-            <a href="./poltattoo.html">Pol Tattoo</a>
-          </div>
-          <div id="information">
-            <div class="breadcrumb">
-              <ul>
-                <li><a href="../../index.html">Inicio</a></li>
-                <li><a href="../invitados.html">Invitados</a></li>
-                <li><a href="./sukisha.html">Sukisha</a></li>
-              </ul>
+      <main>
+        <div class="main">
+          <div class="content">
+            <div class="sidebar">
+              <a href="./faky.html">Faky</a>
+              <a href="./kiki.html">Kiki vivi lily</a>
+              <a href="./odashima.html">Odashima</a>
+              <a href="./shirogane.html">Shirogane</a>
+              <a class="active" href="./sukisha.html">Sukisha</a>
+              <a href="./laia.html">Laia López</a>
+              <a href="./ginny.html">Ginni Di</a>
+              <a href="./meowri.html">Jenna Lynn</a>
+              <a href="./halex.html">H. Alexander</a>
+              <a href="./ladybeard.html">Lady Beard</a>
+              <a href="./overwatchvoices.html">Voces de Overwatch</a>
+              <a href="./poltattoo.html">Pol Tattoo</a>
             </div>
-            <div class="titleBox">
-              <div id="title">
-                <span>Sukisha</span>
+            <div class="information-box">
+              <div class="breadcrumb">
+                <ul>
+                  <li><a href="../../index.html">Inicio</a></li>
+                  <li><a href="../invitados.html">Invitados</a></li>
+                  <li><a href="sukisha.html">Sukisha</a></li>
+                </ul>
+              </div>
+              <div class="titleBox">
+                <div id="title">
+                  <span>Sukisha</span>
+                </div>
+              </div>
+              <div class="information">
+                <div class="picture">
+                  <img src="../../images/artistas/artist5-avatar.png" />
+                </div>
+                <article>
+                  <p>
+                    Se trata del productor y cantante japonés SUKISHA, siendo la
+                    primera estrella invitada de Manguca. Por primera vez fuera de
+                    Japón se podrá disfrutar de los temas y la música de este
+                    maestro del lo-fi hip hop, el género musical que más de moda
+                    está en internet.
+                  </p>
+                  <div class="iframe">
+                    <img
+                      src="../../images/artistas/artist5-banner.jpg"
+                      id="picture-article"
+                    />
+                  </div>
+                  <p>
+                    La obra de este artista japonés destaca por sus composiciones
+                    de estilo lo-fi hip hop, un enfoque estético de la música en
+                    donde predomina el uso de medios de grabación de baja
+                    fidelidad. Conocido también como Hiroyuki Ikezawa, es un
+                    productor que lo pone de relieve no solo con este tipo de
+                    música. Tras este artista encontramos temas de corte más pop
+                    como Blue in Green, Buddha’s Palm, Pink Jewelry Dream o 4 and
+                    half minutes magic.
+                  </p>
+                  <div class="iframe">
+                    <iframe
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/KvmmnAmHKVA"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </div>
+                  <table>
+                    <tbody>
+                      <tr>
+                        <th>Año</th>
+                        <th>Disco</th>
+                        <th>Premios</th>
+                      </tr>
+  
+                      <tr>
+                        <td>2014</td>
+                        <td>
+                          Segment of Cakes
+                        </td>
+                        <td>
+                          -
+                        </td>
+                      </tr>
+  
+                      <tr>
+                        <td>2016</td>
+                        <td>
+                          Junk Food Society
+                        </td>
+                        <td>
+                          MTV Video Music Award<br />
+                          Teen Choice Award
+                        </td>
+                      </tr>
+  
+                      <tr>
+                        <td>2017</td>
+                        <td>
+                          Beside Your Bedside
+                        </td>
+                        <td>
+                          People's Choice Awards
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>2017</td>
+                        <td>
+                          Over the Rainbow
+                        </td>
+                        <td>
+                          American Music Award<br />
+                          Grammy Award
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </article>
               </div>
             </div>
-            <div id="information">
-              <div class="picture">
-                <img src="../../images/artistas/artist5-avatar.png" />
+          </div>
+        </div>
+      </main>
+      <footer>
+        <div class="footer">
+          <div class="about">
+            <div class="colabout">
+              <div>
+                <a
+                  href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                  >Contactar por correo</a
+                >
               </div>
-              <article>
-                <p>
-                  Se trata del productor y cantante japonés SUKISHA, siendo la
-                  primera estrella invitada de Manguca. Por primera vez fuera de
-                  Japón se podrá disfrutar de los temas y la música de este
-                  maestro del lo-fi hip hop, el género musical que más de moda
-                  está en internet.
-                </p>
-                <div class="iframe">
-                  <img
-                    src="../../images/artistas/artist5-banner.jpg"
-                    id="picture-article"
-                  />
-                </div>
-                <p>
-                  La obra de este artista japonés destaca por sus composiciones
-                  de estilo lo-fi hip hop, un enfoque estético de la música en
-                  donde predomina el uso de medios de grabación de baja
-                  fidelidad. Conocido también como Hiroyuki Ikezawa, es un
-                  productor que lo pone de relieve no solo con este tipo de
-                  música. Tras este artista encontramos temas de corte más pop
-                  como Blue in Green, Buddha’s Palm, Pink Jewelry Dream o 4 and
-                  half minutes magic.
-                </p>
-                <div class="iframe">
-                  <iframe
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/KvmmnAmHKVA"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
-                </div>
-                <table>
-                  <tbody>
-                    <tr>
-                      <th>Año</th>
-                      <th>Disco</th>
-                      <th>Premios</th>
-                    </tr>
-
-                    <tr>
-                      <td>2014</td>
-                      <td>
-                        Segment of Cakes
-                      </td>
-                      <td>
-                        -
-                      </td>
-                    </tr>
-
-                    <tr>
-                      <td>2016</td>
-                      <td>
-                        Junk Food Society
-                      </td>
-                      <td>
-                        MTV Video Music Award<br />
-                        Teen Choice Award
-                      </td>
-                    </tr>
-
-                    <tr>
-                      <td>2017</td>
-                      <td>
-                        Beside Your Bedside
-                      </td>
-                      <td>
-                        People's Choice Awards
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>2017</td>
-                      <td>
-                        Over the Rainbow
-                      </td>
-                      <td>
-                        American Music Award<br />
-                        Grammy Award
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </article>
+  
+              <div>
+                <a href="../informacion/invitados.html">Voluntariado</a>
+              </div>
             </div>
+            <div class="colabout">
+              <div>
+                <a href="../bases/torneos.html">Bases de Torneos</a>
+              </div>
+              <div>
+                <a href="../bases/concursos.html">Bases de Concursos</a>
+              </div>
+              <div>
+                <a href="../bases/politica.html">Política de privacidad</a>
+              </div>
+            </div>
+          </div>
+          <div class="contacto">
+            <div class="contactos">
+              <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+              <img
+                id="iconos"
+                src="../../images/iconos/twitter.png"
+                alt="Twitter"
+              />
+              <img
+                id="iconos"
+                src="../../images/iconos/facebook.png"
+                alt="Facebook"
+              />
+              <img
+                id="iconos"
+                src="../../images/iconos/insta.png"
+                alt="Instagram"
+              />
+            </div>
+            <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
           </div>
         </div>
-      </div>
-    </main>
-    <!-- FOOTER -->
-    <footer>
-      <div class="footer">
-        <div class="about">
-          <div class="colabout">
-            <div>
-              <a
-                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-                >Contactar por correo</a
-              >
-            </div>
-            <div>
-              <a href="../footer/voluntariado.html">Voluntariado</a>
-            </div>
-          </div>
-          <div class="colabout">
-            <div>
-              <a href="../footer/torneos.html">Bases de Torneos</a>
-            </div>
-            <div>
-              <a href="../footer/concursos.html">Bases de Concursos</a>
-            </div>
-            <div>
-              <a href="../footer/politica.html">Política de privacidad</a>
-            </div>
-          </div>
-        </div>
-        <div class="contacto">
-          <div class="contactos">
-            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img
-              id="iconos"
-              src="../../images/iconos/twitter.png"
-              alt="Twitter"
-            />
-            <img
-              id="iconos"
-              src="../../images/iconos/facebook.png"
-              alt="Facebook"
-            />
-            <img
-              id="iconos"
-              src="../../images/iconos/insta.png"
-              alt="Instagram"
-            />
-          </div>
-          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
-        </div>
-      </div>
-    </footer>
-    <!-- SCRIPTS -->
-    <script src="../../js/scroll.js"></script>
+      </footer>
+      <script src="../../js/scroll.js"></script>
+      <script src="../../js/sidebar.js"></script>
+
   </body>
 </html>
